5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1602_1571.log
== TEST (2019-03-22 23:35:12) 
-- CODE:
texto = "renan couto"
print(texto.upper())

-- OUTPUT:
RENAN COUTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:35:22) 
-- CODE:
texto = "renan couto"
print(texto.upper())

-- EXECUTION TIME:
0.127639
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
RENAN COUTO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:35:57) 
-- CODE:
texto = "renan couto"
print(texto.upper())

-- OUTPUT:
RENAN COUTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:36:04) 
-- CODE:
texto = "renan couto"
print(texto.upper())

-- EXECUTION TIME:
0.194463
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
RENAN COUTO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:37:39) 
-- CODE:
input("texto")
texto = "renan couto"
print(texto.upper())

-- OUTPUT:
RENAN COUTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:37:50) 
-- CODE:
input("texto")
texto = "renan couto"
print(texto.upper())

-- OUTPUT:
RENAN COUTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:37:56) 
-- CODE:
input("texto")
texto = "renan couto"
print(texto.upper())

-- OUTPUT:
RENAN COUTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:38:01) 
-- CODE:
input("texto")
texto = "renan couto"
print(texto.upper())

-- EXECUTION TIME:
0.13036
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
RENAN COUTO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:40:53) 
-- CODE:

texto = "renan couto"
print(texto.upper() )

-- EXECUTION TIME:
0.155248
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
RENAN COUTO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:40:57) 
-- CODE:

texto = "renan couto"
print(texto.upper() )

-- OUTPUT:
RENAN COUTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:42:20) 
-- CODE:
input("renan couto")
print(texto.upper() )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper() )
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:42:27) 
-- CODE:
input("renan couto")
print(texto.upper() )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper() )
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:42:48) 
-- CODE:
input("renan couto")
print(input.upper() )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input.upper() )
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:42:54) 
-- CODE:
input("renan couto")
print(input.upper() )

-- EXECUTION TIME:
0.204116
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1571/main.py", line 2, in <module>
    print(input.upper() )
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:46:48) 
-- CODE:
input("renan couto")
print(.upper() )

-- ERROR:
File "XXXX", line 2
    print(.upper() )
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:47:24) 
-- CODE:
input("renan couto")
print(upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper())
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:47:31) 
-- CODE:
input("renan couto")
print(upper())

-- EXECUTION TIME:
0.184444
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1571/main.py", line 2, in <module>
    print(upper())
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:47:35) 
-- CODE:
input("renan couto")
print(upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper())
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:13:19) 
-- CODE:
texto = "Renan Couto"
print(upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper())
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:13:45) 
-- CODE:
texto = "Renan Couto"
print(texto.upper())

-- OUTPUT:
RENAN COUTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:13:51) 
-- CODE:
texto = "Renan Couto"
print(texto.upper())

-- EXECUTION TIME:
0.1679
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
RENAN COUTO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:15:45) 
-- CODE:

texto = input("digite um texo qualquer")

print(texto.upper())

-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:16:15) 
-- CODE:

texto = input("digite um texo qualquer")

print(texto.upper())

-- EXECUTION TIME:
0.16395
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
